avance/solutions/cycle-vie/exercice1/environments/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-app-dev
  labels:
    environment: dev
    security-level: standard
