avance/solutions/cycle-vie/exercice1/environments/dev/security-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-app
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: app
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "200m"
